major update: huge modifieng complete service, reduce to necessary endpoints and access via webclient to the book_Service, modified also api accordingly the new endpoints
